--- a/test_folder/test.ipynb
+++ b/test_folder/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from rocket_package.rocket_interface import process_llm_response"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +149,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 141\u001b[0m\n\u001b[1;32m    138\u001b[0m reward \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    139\u001b[0m target_apogee \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m\n\u001b[0;32m--> 141\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mresponse\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msimple_results\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[1;32m    142\u001b[0m     reward \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.05\u001b[39m \u001b[38;5;66;03m#compiled so here's some reward\u001b[39;00m\n\u001b[1;32m    144\u001b[0m distance_reward \u001b[38;5;241m=\u001b[39m exp(\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mabs\u001b[39m(response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msimple_results\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapogee\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m target_apogee) \u001b[38;5;241m/\u001b[39m (target_apogee\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.1\u001b[39m))\n",
+      "Cell \u001b[0;32mIn[5], line 135\u001b[0m\n\u001b[1;32m    132\u001b[0m reward \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    133\u001b[0m target_apogee \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m\n\u001b[0;32m--> 135\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mresponse\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msimple_results\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[1;32m    136\u001b[0m     reward \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.05\u001b[39m \u001b[38;5;66;03m#compiled so here's some reward\u001b[39;00m\n\u001b[1;32m    138\u001b[0m distance_reward \u001b[38;5;241m=\u001b[39m exp(\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mabs\u001b[39m(response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msimple_results\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapogee\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m target_apogee) \u001b[38;5;241m/\u001b[39m (target_apogee\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.1\u001b[39m))\n",
       "\u001b[0;31mKeyError\u001b[0m: 'simple_results'"
      ]
     }
